Lets see if this fixes tests

--- a/dist.ini
+++ b/dist.ini
@@ -24,7 +24,7 @@ issues = 1
 
 ; Stuff that tests my code
 [Test::Perl::Critic]
-critic_config = t/.perlcriticrc
+; critic_config = t/.perlcriticrc
 [Test::Compile]
 [Test::Kwalitee]
 [Test::EOF]
