Update dist.ini. Sort Test:: and add .github for pruning

--- a/dist.ini
+++ b/dist.ini
@@ -23,8 +23,6 @@ issues = 1
 [ContributorsFile]
 
 ; Stuff that tests my code
-[Test::Perl::Critic]
-; critic_config = t/.perlcriticrc
 [Test::Compile]
 [Test::Kwalitee]
 [Test::EOF]
@@ -32,6 +30,7 @@ issues = 1
 [Test::Legal]
 [Test::NoTabs]
 [Test::PAUSE::Permissions]
+[Test::Perl::Critic]
 [Test::Portability]
 ;[Test::PodSpelling]
 [Test::Pod::LinkCheck]
@@ -61,6 +60,7 @@ pledge_file = AUTHOR_PLEDGE
 [PruneFiles]
 match = ^dist\.ini
 match = ^.editorconfig
+match = ^.github
 match = .*spec
 
 [Clean]
