--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name = Net-Proxmox-VE
 version = 0.40
-author = Brendan Beveridge <brendan@nodeintegration.com.au>, Dean Hamstead <dean@fragfest.com.au>
+author = Dean Hamstead <dean@fragfest.com.au>
 license = MIT
 copyright_holder = Dean Hamstad
 copyright_year = 2025
@@ -61,6 +61,7 @@ pledge_file = AUTHOR_PLEDGE
 match = ^dist\.ini
 match = ^.editorconfig
 match = ^.github
+match = ^.mailmap
 match = .*spec
 
 [Clean]
