--- a/dist.ini
+++ b/dist.ini
@@ -61,6 +61,7 @@ pledge_file = AUTHOR_PLEDGE
 match = ^dist\.ini
 match = ^.editorconfig
 match = ^.github
+match = ^.gitignore
 match = ^.mailmap
 match = .*spec
 
