--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name = Net-Proxmox-VE
 version = 0.41
 author = Dean Hamstead <dean@fragfest.com.au>
 license = MIT
-copyright_holder = Dean Hamstad
+copyright_holder = Dean Hamstead
 copyright_year = 2025
 main_module = lib/Net/Proxmox/VE.pm
 
