--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name = Net-Proxmox-VE
-version = 0.41
+version = 0.42
 author = Dean Hamstead <dean@fragfest.com.au>
 license = MIT
 copyright_holder = Dean Hamstead
@@ -79,6 +79,7 @@ JSON::MaybeXS = 0
 
 [Prereqs / TestRequires]
 Test::CPAN::Meta = 0
+Test::Exception = 0
 Test::More = 0
 Test::Trap = 0
 Test::Vars = 0
