Move perlcriticrc and exclude it from tarballs

--- a/dist.ini
+++ b/dist.ini
@@ -63,6 +63,7 @@ match = ^.editorconfig
 match = ^.github
 match = ^.gitignore
 match = ^.mailmap
+match = ^.perlcriticrc
 match = .*spec
 
 [Clean]
