Exclude repo README which isn't useful for tarball

--- a/dist.ini
+++ b/dist.ini
@@ -58,6 +58,7 @@ pledge_file = AUTHOR_PLEDGE
 [Git::Tag]
 
 [PruneFiles]
+match = ^README$
 match = ^dist\.ini
 match = ^.editorconfig
 match = ^.github
