No need to package TODO file

--- a/dist.ini
+++ b/dist.ini
@@ -59,6 +59,7 @@ pledge_file = AUTHOR_PLEDGE
 
 [PruneFiles]
 match = ^README$
+match = ^TODO$
 match = ^dist\.ini
 match = ^.editorconfig
 match = ^.github
