Disable linkcheck as it is giving github actions problems

--- a/dist.ini
+++ b/dist.ini
@@ -33,7 +33,7 @@ issues = 1
 [Test::Perl::Critic]
 [Test::Portability]
 ;[Test::PodSpelling]
-[Test::Pod::LinkCheck]
+;[Test::Pod::LinkCheck]
 [Test::ReportPrereqs]
 [Test::NoBreakpoints]
 [Test::UnusedVars]
